# UdacityRobotics-map-my-world

./: README.md  startup_notes.txt
ball_chaser/: CMakeLists.txt
ball_chaser/launch/: ball_chaser.launch
ball_chaser/src/: drive_bot.cpp  process_image.cpp
model/new-building/: model.config  model.sdf
model_decorated/: model.config  model.sdf
my_robot/: CMakeLists.txt  map_my_world_config.rviz
my_robot/launch/: localization.launch  mapping.launch  wooden_house_world.launch  world.launch
my_robot/urdf/: materials.xacro  my_robot.gazebo  my_robot.xacro
my_robot/worlds/: my_world  myworld  myworld_without_ball  myworld_without_ball.world  wooden_house.world  wooden_house_with_ball.world  wooden_house_world_decorated.world
src/: drive_bot.cpp
udacity_robot/: CMakeLists.txt  package.xml
udacity_robot/config/: costmap_common_params.yaml  sensor_viewing_rviz_config.rviz
udacity_robot/launch/: amcl.launch
udacity_robot/maps/: wooden_house_map.yaml
